--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,6 @@
 <navigation-bar
   weather="data"
+  type="scale"
   farenheit="toggleF"
   celcius="toggleC"
 ></navigation-bar>
@@ -101,6 +102,7 @@
       <individual-forecast
         scale="scale"
         forecast="forecast"
+        index="$index"
       ></individual-forecast>
     </div>
   </div>
