--- a/views/forecast.html
+++ b/views/forecast.html
@@ -1,13 +1,22 @@
 <div class="individual-day">
-  <p>{{ forecast.date_epoch * 1000 | date:"EEEE, d'th' MMMM" }}</p>
-  <p class="temperature">
-    {{ scale==='c' ? forecast.day.maxtemp_c + ' °C' : forecast.day.maxtemp_f + '
-    °F' }}
-  </p>
-  <p class="temperature">
-    {{ scale==='c' ? forecast.day.mintemp_c + ' °C' : forecast.day.mintemp_f + '
-    °F' }}
-  </p>
+  <a href="#/weather-display/{{index}}">
+    <button type="button" class="btn btn-info">
+      {{ forecast.date_epoch * 1000 | date:"EEEE, d'th' MMMM" }}
+    </button>
+  </a>
+  <table class="table">
+    <tr>
+      <td>
+        Max: {{ scale==='c' ? forecast.day.maxtemp_c + ' °C' :
+        forecast.day.maxtemp_f + ' °F' }}
+      </td>
+      <td>
+        Min: {{ scale==='c' ? forecast.day.mintemp_c + ' °C' :
+        forecast.day.mintemp_f + ' °F' }}
+      </td>
+    </tr>
+  </table>
+
   <p class="forecast-condition">{{ forecast.day.condition.text }}</p>
   <img class="weather-icon" src="{{ forecast.day.condition.icon }}" />
 </div>
