--- a/views/navbar.html
+++ b/views/navbar.html
@@ -8,8 +8,9 @@
   </div>
   <div class="mx-auto order-0">
     <span class="navbar-brand mx-auto"
-      >{{weather.location.localtime_epoch * 1000 | date:"h:mm a"}}</span
-    >
+      >{{weather.location.country}}, {{weather.location.name}} | {{ type==='c' ?
+      weather.current.temp_c + ' °C' : weather.current.temp_f + ' °F' }}
+    </span>
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
     <ul class="navbar-nav ml-auto">
