--- a/css/forecastpanel.css
+++ b/css/forecastpanel.css
@@ -1,3 +1,7 @@
+/*
+forecastpanel.css - contains css for the forecast panels for the current day and 2 day forecast
+*/
+
 .forecast-panel {
   border-radius: 6px;
 
