--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,7 @@
+/*
+navbar.css - contains css for celcius/farenheit toggle
+*/
+
 .nav-link:hover {
   background-color: rgba(68, 96, 221, 0.582);
   border-radius: 6px;
