--- a/css/currentpanel.css
+++ b/css/currentpanel.css
@@ -1,3 +1,7 @@
+/*
+currentpanel.css - contains css for the current day's weather
+*/
+
 .dashboard-panel {
   display: grid;
   grid-template-rows: 1fr 0.5fr;
